log
Thu Mar 25 01:06:38 UTC 2021: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:33:9: error: ‘List {aka struct List}’ has no member named ‘next’
   lista -> next = NULL;
         ^~
list.c:34:9: error: ‘List {aka struct List}’ has no member named ‘prev’
   lista -> prev = NULL;
         ^~
Compilation failed
Thu Mar 25 01:06:50 UTC 2021: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:33:9: error: ‘List {aka struct List}’ has no member named ‘next’
   lista -> next = NULL;
         ^~
list.c:34:9: error: ‘List {aka struct List}’ has no member named ‘prev’
   lista -> prev = NULL;
         ^~
Compilation failed
Thu Mar 25 01:06:54 UTC 2021: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:33:9: error: ‘List {aka struct List}’ has no member named ‘next’
   lista -> next = NULL;
         ^~
list.c:34:9: error: ‘List {aka struct List}’ has no member named ‘prev’
   lista -> prev = NULL;
         ^~
Compilation failed
Thu Mar 25 01:07:32 UTC 2021: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
a6fbff6
Thu Mar 25 01:11:10 UTC 2021: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
8a23007
Thu Mar 25 01:14:52 UTC 2021: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
a3b0d02
Thu Mar 25 01:21:35 UTC 2021: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
39eeec0
Thu Mar 25 01:25:02 UTC 2021: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
298a908
Thu Mar 25 01:26:20 UTC 2021: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 15/70
1808544
Thu Mar 25 01:26:35 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
29ac00d
Thu Mar 25 01:28:05 UTC 2021: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
1ca6427
Thu Mar 25 01:30:23 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c69e024
Thu Mar 25 01:31:19 UTC 2021: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
0eab7ff
Thu Mar 25 01:32:37 UTC 2021: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
b3d0c5a
Thu Mar 25 01:32:48 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
3d4a868
Thu Mar 25 01:33:36 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
5ba35bf
Thu Mar 25 01:34:04 UTC 2021: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
80a31a9
Thu Mar 25 01:46:53 UTC 2021: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  9|3
total_score: 35/70
c9fc1b6
Thu Mar 25 01:47:28 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
ffac006
Thu Mar 25 01:51:16 UTC 2021: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
2427799
Thu Mar 25 01:57:40 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
008e2b9
Thu Mar 25 02:00:48 UTC 2021: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
8eea604
Thu Mar 25 23:59:18 UTC 2021: 
 list.c | 32 ++++++++++++++++++++++++++++++++
 1 file changed, 32 insertions(+)
 tests:  10|2
total_score: 45/70
10e66a6
Fri Mar 26 00:05:00 UTC 2021: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
67991c4
Fri Mar 26 00:07:24 UTC 2021: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  10|2
total_score: 45/70
b25e332
Fri Mar 26 00:09:37 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
fdb1d33
Fri Mar 26 00:13:43 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
89121bf
Fri Mar 26 00:16:02 UTC 2021: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
9729e3f
Fri Mar 26 00:16:22 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
dc7afab
Fri Mar 26 00:16:57 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
6989ee5
